// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserEditForm /> Should render correctly 1`] = `
<div>
  <div
    class="sc-crXcEl"
  >
    <label
      class="sc-fEOsli iHSlJz"
      for="uname_FORM_ID"
    >
      Display name
    </label>
    <div
      class="sc-iBkjds hDuMmX sc-breuTD bOZwsL"
      placeholder="Display name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIouRR cqKYoJ"
        id="uname_FORM_ID"
        name="Display name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-hHLeRK kBmlVx"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEOsli iHSlJz"
      for="name_FORM_ID"
    >
      Real name
    </label>
    <div
      class="sc-iBkjds hDuMmX sc-breuTD bOZwsL"
      placeholder="Real name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="name"
        class="sc-dIouRR cqKYoJ"
        id="name_FORM_ID"
        name="Real name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-hHLeRK kBmlVx"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEOsli iHSlJz"
      for="email_FORM_ID"
    >
      Email
    </label>
    <div
      class="sc-iBkjds hDuMmX sc-breuTD bOZwsL"
      placeholder="Email"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="email"
        class="sc-dIouRR cqKYoJ"
        id="email_FORM_ID"
        name="Email"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-hHLeRK kBmlVx"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="sc-dkzDqf bOfPfm sc-evZas hAEDCd"
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Update
      </span>
    </button>
  </div>
</div>
`;

exports[`<UserEditForm /> Should render correctly with admin controls shown 1`] = `
<div>
  <div
    class="sc-crXcEl"
  >
    <label
      class="sc-fEOsli iHSlJz"
      for="uname_FORM_ID"
    >
      Display name
    </label>
    <div
      class="sc-iBkjds hDuMmX sc-breuTD bOZwsL"
      placeholder="Display name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIouRR cqKYoJ"
        id="uname_FORM_ID"
        name="Display name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-hHLeRK kBmlVx"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEOsli iHSlJz"
      for="name_FORM_ID"
    >
      Real name
    </label>
    <div
      class="sc-iBkjds hDuMmX sc-breuTD bOZwsL"
      placeholder="Real name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="name"
        class="sc-dIouRR cqKYoJ"
        id="name_FORM_ID"
        name="Real name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-hHLeRK kBmlVx"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEOsli iHSlJz"
      for="email_FORM_ID"
    >
      Email
    </label>
    <div
      class="sc-iBkjds hDuMmX sc-breuTD bOZwsL"
      placeholder="Email"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="email"
        class="sc-dIouRR cqKYoJ"
        id="email_FORM_ID"
        name="Email"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-hHLeRK kBmlVx"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-ftvSup bMRhqZ sc-fnykZs dYLQUI"
      id="admin_FORM_ID"
    >
      <div
        class="sc-papXJ gtFCxX"
      >
        <input
          aria-invalid="false"
          aria-label="Is admin"
          class="sc-jqUVSM hocLPL"
          name="Is admin"
          type="checkbox"
        />
        <svg
          class="sc-gKXOVf ktoyia sc-kDDrLX bmdoJK"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-iqcoie bBXilN"
      >
        Is admin
      </div>
    </label>
    <button
      class="sc-dkzDqf bOfPfm sc-evZas hAEDCd"
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Update
      </span>
    </button>
  </div>
</div>
`;
